# reinicorn

./: .gitignore  .gitmodules  .reinicorn-config  .shellcheckrc  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING-STARTED.md  HUMANS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/skills/: ATTRIBUTION.md
.agents/skills/brainstorming/: SKILL.md
.agents/skills/dispatching-parallel-agents/: SKILL.md
.agents/skills/executing-plans/: SKILL.md
.agents/skills/finishing-a-development-branch/: SKILL.md
.agents/skills/populate-agents-md/: SKILL.md
.agents/skills/receiving-code-review/: SKILL.md
.agents/skills/requesting-code-review/: SKILL.md
.agents/skills/subagent-driven-development/: SKILL.md
.agents/skills/systematic-debugging/: SKILL.md
.agents/skills/test-driven-development/: SKILL.md
.agents/skills/update-superpowers/: SKILL.md  replacements.yaml
.agents/skills/using-git-worktrees/: SKILL.md
.agents/skills/using-reinicorn/: SKILL.md
.agents/skills/verification-before-completion/: SKILL.md
.agents/skills/writing-plans/: SKILL.md
.agents/skills/writing-skills/: SKILL.md
.claude/: mcp.json  settings.json
.claude/hooks/: README.md  session-start.sh
.cursor/: hooks.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/hooks/: reinicorn.json
.github/workflows/: doc-gardening.yml  lint-architecture.yml  lint-kb.yml  test.yml
.reinicorn/hooks/: block-raw-kb-git.sh
.superpowers/sdd/: progress.md
editor-hooks/: enforce-doc-templates.sh
hooks/: post-checkout  post-merge  pre-push
linters/: .lint-config.json  README.md
linters/ci-recovery/: README.md  recovery-protocol.md
linters/ci-recovery/handlers/: build-failure.md  deploy-failure.md  lint-failure.md  test-failure.md
linters/framework/: lint-rule-template.md  run-lints.sh
linters/rules/kb/: cross-links.sh  docs-freshness.sh  plan-structure.sh  provenance.sh
linters/rules/scripts/: shellcheck.sh
platform-instructions/: claude.md  copilot.md  cursor.md
src/reinicorn/: __init__.py  __main__.py  assets.py  cli.py  config.py  console.py  doc_types.py  docmeta.py  git.py  github.py  identity.py  kb.py  kb_seed.py  manifest.py  meta.py  mode.py  review.py  submodule.py  validation.py
src/reinicorn/commands/: doc_create.py  doc_show.py  feedback.py  home.py  hooks_install.py  idea.py  init.py  init_platforms.py  kb_git.py  kb_manage.py  lint.py  mode_cmds.py  plan.py  publish.py  review.py  status.py  sync.py  update.py
src/reinicorn/commands/internal/: hook_check.py  post_checkout.py  post_merge.py  pre_push.py  review_cleanup.py
src/reinicorn/linter/: runner.py
src/reinicorn/linter/rules/: __init__.py  base.py  cross_links.py  (+3 more)
templates/: AGENTS.md
tests/: conftest.py  run-all.sh  test_assets.py  test_cli_shape.py  test_commit_kb.py  test_config.py  test_console.py  test_doc_types.py  test_docmeta.py  test_git.py  test_github.py  test_guardrail_hook.py  test_identity.py  test_init_collisions.py  test_init_gh.py  test_init_hook.py  test_init_manifest.py  test_init_platforms.py  test_init_slug_override.py  test_kb.py  test_kb_manage.py  test_kb_seed.py  test_licensing.py  test_manifest.py  test_meta.py  test_mode.py  test_multi_repo_init.py  test_output_conventions.py  test_packaging.py  test_post_checkout_worktree.py  test_prompt_platforms.py  test_public_identity.py  test_review.py  test_skill_copy.py  test_source_editor_integrations.py  test_source_of_truth.py  test_submodule.py  test_update.py  test_validation.py
tests/commands/: test_dispatch.py  test_doc_create.py  test_doc_show.py  test_feedback.py  test_home.py  test_hooks_install.py  test_idea.py  test_init.py  test_kb_git.py  test_mode_cmds.py  test_plan.py  test_post_merge.py  test_publish.py  test_retro.py  test_review.py  test_status.py  test_status_compact.py  test_sync.py
tests/commands/internal/: test_post_checkout.py  test_post_merge.py  test_pre_push.py  test_review_cleanup.py
tests/linter/: test_rules.py  test_runner.py
upgrades/: README.md
workflows/: reinicorn-doc-review-cleanup.yml
