[project]
name = "reinicorn"
dynamic = ["version"]
description = "Agentic engineering kb CLI"
requires-python = ">=3.12"
dependencies = []
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Michael Biehl"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Repository = "https://github.com/crystldm/reinicorn"

[project.scripts]
rcorn = "reinicorn.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/reinicorn/_version.py"

[tool.hatch.build.targets.sdist]
# Authoritative allowlist (only-include, not include): the sdist contains ONLY
# what a source build needs to rebuild the wheel, plus tests and project
# metadata. Without this the sdist swept in the private kb/ tree,
# presentation/node_modules, .superpowers/, and other dev material.
only-include = [
    "src/reinicorn",
    "tests",
    "templates/AGENTS.md",
    ".agents/skills",
    "hooks",
    "editor-hooks",
    "linters",
    "upgrades",
    "platform-instructions",
    "workflows",
    "pyproject.toml",
    "uv.lock",
    "README.md",
    "GETTING-STARTED.md",
    "LICENSE",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
    "SECURITY.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reinicorn"]

[tool.hatch.build.targets.wheel.force-include]
"templates/AGENTS.md" = "reinicorn/_data/templates/AGENTS.md"
".agents/skills" = "reinicorn/_data/skills"
"hooks" = "reinicorn/_data/hooks"
"editor-hooks" = "reinicorn/_data/editor-hooks"
"linters" = "reinicorn/_data/linters"
"upgrades" = "reinicorn/_data/upgrades"
"platform-instructions" = "reinicorn/_data/platform-instructions"
"workflows" = "reinicorn/_data/workflows"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "pyright>=1.1.411",
    "pyyaml>=6.0.3",
    "bashlex>=0.18",
]

[tool.ruff]
# Target the minimum supported version (requires-python = ">=3.12") so lint
# rules flag anything that would break on 3.12.
target-version = "py312"
src = ["src"]
line-length = 99
extend-exclude = ["src/reinicorn/_version.py"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print (catch stray prints in library code)
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "PTH",   # flake8-use-pathlib
    "ARG",   # flake8-unused-arguments
    "RUF",   # ruff-specific
    "TID",   # flake8-tidy-imports (banned-api below)
]
ignore = [
    "T201",  # print() is intentional in a CLI
    "S603",  # subprocess without shell=True is fine
    "S607",  # partial executable path is fine for git
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"reinicorn.git.sanitize_branch".msg = "Branch→path conversion is owned by kb.py; use kb.branch_dir_name/kb.branch_doc_path."

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # assert is fine in tests
    "TCH",    # pedantic import guards are not useful in tests
    "ARG001", # unused args are fine — pytest fixtures read as parameters even when unused
    "TID251", # tests may exercise banned internals directly (e.g. sanitize_branch units)
]
"src/reinicorn/kb.py" = [
    "TID251", # kb.py is the one consumer allowed to wrap sanitize_branch
]

[tool.pyright]
# Type-check against the minimum supported version (requires-python >= 3.12).
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src"]
